--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -33,26 +33,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 0.4rem;
 }
 
-.title a {
-  color: #0070f3;
+.footer a {
+  color: #2c97e8;
   text-decoration: none;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
+.footer a:hover,
+.footer a:focus,
+.footer a:active {
   text-decoration: underline;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
 .description {
   text-align: center;
 }
@@ -77,26 +71,25 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
-  margin-top: 3rem;
 }
 
 .card {
   margin: 1rem;
-  flex-basis: 45%;
+  flex-basis: 100%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: color 0.15s eaase, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.card a:hover,
+.card a:focus,
+.card a:active {
+  color: #2c97e8;
+  border-color: #2c97e8;
 }
 
 .card h3 {
@@ -110,13 +103,35 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
+.card .meta {
+  font-weight: normal;
+  opacity: 0.6;
+  font-size: 80%;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.card .line {
+  display: flex;
+  align-items: center;
+}
+.card .line > .fill {
+  width: 100%;
+  flex: 1;
+}
+
+.sha {
+  padding: 0.2em 0.4em;
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-size: 90%;
+  background-color: rgba(0, 0, 0, 0.04);
+  border: 1px solid #eaecef;
+  border-radius: 0.2em;
+  margin-right: 0.4rem;
+}
+
+.shaVisaulized {
+  display: inline-block;
+  height: 0.9em;
+  width: 0.9em;
+  border-radius: 100%;
+  margin-right: 0.4rem;
 }
