--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -135,3 +135,9 @@
   border-radius: 100%;
   margin-right: 0.4rem;
 }
+
+.gravatar {
+  border-radius: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
